--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name | Web Developer</title>
+  <title>Laraib Tahir | Web Developer</title>
   <meta name="description" content="Portfolio of Your Name, a web developer specializing in modern web applications, responsive design, and elegant solutions." />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
 
